--- a/pom.xml
+++ b/pom.xml
@@ -1,55 +1,78 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Arquivo de configuração do Maven para o projeto -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <!-- Versão do modelo POM que está sendo usada -->
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.projeto</groupId>
-    <artifactId>ProjetoGestao</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <!-- Informações básicas do projeto -->
+    <groupId>org.projeto</groupId> <!-- Grupo do projeto, geralmente segue o domínio invertido -->
+    <artifactId>ProjetoGestao</artifactId> <!-- Nome do artefato gerado -->
+    <version>1.0-SNAPSHOT</version> <!-- Versão atual do projeto -->
 
+    <!-- Propriedades que definem configurações globais -->
     <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>17</maven.compiler.source> <!-- Versão do Java usada no código fonte -->
+        <maven.compiler.target>17</maven.compiler.target> <!-- Versão alvo para compilação -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> <!-- Codificação de arquivos fonte -->
     </properties>
+
+    <!-- Dependências necessárias para o projeto -->
     <dependencies>
+        <!-- Hibernate: ORM usado para comunicação com banco de dados -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>6.4.4.Final</version>
         </dependency>
+
+        <!-- Driver JDBC do PostgreSQL -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.6.0</version>
         </dependency>
+
+        <!-- SLF4J: API de logging (abstração para logs) -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.36</version>
         </dependency>
+
+        <!-- Logback: Implementação concreta para SLF4J -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.2.11</version>
         </dependency>
+
+        <!-- Conector de logging do Java Util Logging (JUL) para SLF4J -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>jul-to-slf4j</artifactId>
             <version>1.7.36</version>
         </dependency>
+
+        <!-- API da Jakarta Persistence (JPA) -->
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
             <version>3.1.0</version>
         </dependency>
     </dependencies>
+
+    <!-- Configuração de build do projeto -->
     <build>
         <resources>
             <resource>
+                <!-- Define onde estão os arquivos de recursos (como persistence.xml) -->
                 <directory>src/main/resources</directory>
                 <includes>
+                    <!-- Inclui todos os arquivos XML como recursos -->
                     <include>**/*.xml</include>
                 </includes>
             </resource>
